# ai-formal-verification-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
examples/dafny/: binary_search.dfy  binary_search_skeleton.dfy  max_array.dfy  max_array_skeleton.dfy
examples/lean/: BinarySearch.lean  SimpleTheorems.lean
examples/tlaplus/: BinarySearch.cfg  BinarySearch.tla  MutualExclusion.cfg  MutualExclusion.tla  MutualExclusion_skeleton.cfg  MutualExclusion_skeleton.tla
notebooks/: 01-intro-to-verification.ipynb  02-dafny-demo.ipynb  03-lean4-demo.ipynb  04-tlaplus-demo.ipynb  05-comparison.ipynb
src/: __init__.py  llm_client.py  verifiers.py
