[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-formal-verification-demo"
version = "0.1.0"
description = "Demonstrating LLM-assisted formal verification across Dafny, Lean4, and TLA+"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Joshua Milburn"}
]
keywords = ["formal-verification", "llm", "dafny", "lean", "tlaplus", "ai"]

dependencies = [
    "anthropic>=0.40.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://unalarming.com"
Repository = "https://github.com/joshuamilburn/ai-formal-verification-demo"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
